chore: clean up the code of initial project